--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
+    "mongodb": "^6.12.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
