--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.12.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
