--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.12.0",
     "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-bit": "^1.2.3",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.2.0",
     "svgr": "^1.10.0"
   },
   "devDependencies": {
@@ -25,8 +31,6 @@
     "@svgr/webpack": "^8.1.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
