--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.5",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
     "js-cookie": "^3.0.5",
@@ -21,8 +22,11 @@
     "next": "^15.1.0",
     "react": "^18.3.1",
     "react-bit": "^1.2.3",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.3.0",
+    "react-responsive-pagination": "^2.10.3",
     "react-router-dom": "^7.2.0",
     "svgr": "^1.10.0"
   },
