--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-paginate": "^8.3.0",
     "react-responsive-pagination": "^2.10.3",
     "react-router-dom": "^7.2.0",
+    "react-svg": "^16.3.0",
     "svgr": "^1.10.0"
   },
   "devDependencies": {
