--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "axios": "^1.7.9",
@@ -26,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.3.0",
+    "react-redux": "^9.2.0",
     "react-responsive-pagination": "^2.10.3",
     "react-router-dom": "^7.2.0",
     "react-svg": "^16.3.0",
