update the behavior section in setting page

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     "svgr.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/features/hideExtraElements"
   ],
   "exclude": ["node_modules"]
 }
